// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Generated Snapshots AdjustedWidth story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r35:"
      id="headlessui-label-:r34:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r36:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r34: headlessui-listbox-button-:r35:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r35:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Default story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r3:"
      id="headlessui-label-:r2:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r4:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r2: headlessui-listbox-button-:r3:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r3:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Error story renders snapshot 1`] = `
<div
  class="select select--has-fieldNote select--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r43:"
      id="headlessui-label-:r42:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Required)
    </span>
    <div
      class="select__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r44:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r42: headlessui-listbox-button-:r43:"
    class="select-button select-button--error"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r43:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots HorizontalLabel story renders snapshot 1`] = `
<div
  class="select select--label-layout-horizontal w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:rd:"
      id="headlessui-label-:rc:"
    >
      <span
        class="text text--label-md"
      >
        Animal?
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:re:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:rc: headlessui-listbox-button-:rd:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:rd:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots MultipleWithTruncation story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r2r:"
      id="headlessui-label-:r2q:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r2s:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r2q: headlessui-listbox-button-:r2r:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r2r:"
    type="button"
  >
    <span
      class="text text--input select-button__text--truncated"
    >
      1
       long selected description
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots NoVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r4n:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r4m:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots NoVisibleLabelButRequired story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline select__overline--no-label"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r50:"
      id="headlessui-label-:r4v:"
    >
      <span
        class="text text--label-md"
      />
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r51:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r4v: headlessui-listbox-button-:r50:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r50:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Optional story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r3p:"
      id="headlessui-label-:r3o:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Optional)
    </span>
    <div
      class="select__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r3q:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r3o: headlessui-listbox-button-:r3p:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r3p:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Required story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r3f:"
      id="headlessui-label-:r3e:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Required)
    </span>
    <div
      class="select__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r3g:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r3e: headlessui-listbox-button-:r3f:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r3f:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots StyledUncontrolled story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r2i:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r2h:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots UncontrolledHeadless story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r29:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="fpo"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r28:"
    type="button"
  >
    🐶🐕🐩
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Warning story renders snapshot 1`] = `
<div
  class="select select--has-fieldNote select--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r4d:"
      id="headlessui-label-:r4c:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Optional)
    </span>
    <div
      class="select__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r4e:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r4c: headlessui-listbox-button-:r4d:"
    class="select-button select-button--warning"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r4d:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithFieldName story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r1l:"
      id="headlessui-label-:r1k:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <div
      class="select__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Additional descriptive text
      </span>
    </div>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1m:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r1k: headlessui-listbox-button-:r1l:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r1l:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithFieldNote story renders snapshot 1`] = `
<div
  class="select select--has-fieldNote select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r1v:"
      id="headlessui-label-:r1u:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r20:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r1u: headlessui-listbox-button-:r1v:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r1v:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithSelectedBy story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r1b:"
      id="headlessui-label-:r1a:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1c:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r1a: headlessui-listbox-button-:r1b:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r1b:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithSelectedOption story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:r11:"
      id="headlessui-label-:r10:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r12:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:r10: headlessui-listbox-button-:r11:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:r11:"
    type="button"
  >
    <span
      class="text text--input"
    >
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithStandardButton story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical"
  data-headlessui-state="open"
  data-open=""
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--md select__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-listbox-button-:rn:"
      id="headlessui-label-:rm:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:ro:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-label-:rm: headlessui-listbox-button-:rn:"
    class="select-button"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    id="headlessui-listbox-button-:rn:"
    type="button"
  >
    <span
      class="text text--input"
    >
      - Select Option -
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;
